# agentic-rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
agent_rag/utils/: __init__.py  nodes.py  state.py  tools.py
app/: config.py  pyproject.toml
app/scripts/: __init__.py  ingestion.py  preprocessor.py
app/src/agent/: graph.py
app/src/agent/utils/: nodes.py  prompts.py  retrieval_nodes.py  state.py  tools.py  workflow.py
app/utils/: embeddings.py
utils/: __init__.py  config.py  data_preprocessor.py  embeddings.py  ingestion.py  preprocessor.py
